--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@langchain/openai": "^0.4.4",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
