--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@azure/identity": "^4.7.0",
+    "@azure/keyvault-secrets": "^4.9.0",
     "@eslint/js": "^9.20.0",
     "@langchain/openai": "^0.4.4",
     "@types/express": "^5.0.0",
