--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "tsx example/index.ts",
-    "dev": "nodemon --watch src --exec tsx example/index.ts",
+    "dev:local-lm": "nodemon --watch src --exec tsx example/local-lm-sample.ts",
+    "dev:cloud-lm": "nodemon --watch src --exec tsx example/cloud-lm-sample.ts",
     "build": "tsc",
     "lint": "eslint .",
     "format": "prettier --write .",
@@ -35,7 +36,7 @@
   ],
   "author": "Gregor Biswanger",
   "license": "MIT",
-  "type": "commonjs",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/GregorBiswanger/OllamaApiFacadeJS.git"
