--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2016",
-    "module": "commonjs",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "removeComments": false,
     "declaration": true,
     "declarationMap": true,      
